added angular -index page -countries

--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar bg-dark text-light py-4">
             <div class="col-md-2">
-                <a href="/" style="text-decoration:none"
+                <a [routerLink]="['/']" style="text-decoration:none"
                 class="text-light"><h2>Historic Teamz</h2></a>
             </div>
         </nav>
