designing create game form

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
             <div class="col text-center">
                 <div id="countries" class="my-4 list-group"></div>
                 <div id="organizations" class="my-4 list-group"></div>
-                <div id="seasons" class="my-4 list-group"></div>
+                <!-- <div id="seasons" class="my-4 list-group"></div> -->
                 <div id="games" class="my-4 list-group"></div>
                 <div id="players" class="my-4 list-group"></div>
             </div>            
