mostly functional -need to add creating ability

--- a/views/createGame.ejs
+++ b/views/createGame.ejs
@@ -89,6 +89,11 @@
                         <div id="collapseOppo" class="collapse" aria-labelledby="headOppo" 
                         data-parent="#gameAccordion">
                             <div class="card-body">
+                                <input class="form-control my-2" type="text" id="oppoInp">
+                                <div class="form-group">
+                                    <select multiple class="form-control" id="oppoSelect">
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -114,6 +119,12 @@
                         <div id="collapseComp" class="collapse" aria-labelledby="headComp" 
                         data-parent="#gameAccordion">
                             <div class="card-body">
+                                <input class="form-control my-2" type="text" id="compInp">
+                                <div class="form-group">
+                                    <select multiple class="form-control" id="compSelect"
+                                    form="#createGameForm">
+                                    </select>
+                                </div>
                             </div>
                         </div>
                     </div>
