--- a/views/createGame.ejs
+++ b/views/createGame.ejs
@@ -248,6 +248,17 @@
                                     <div class="col">
                                         <input class="form-control my-2" type="text" id="startInp">
                                     </div>
+                                    <div class="col-md-2 text-center">
+                                        <div class="form-group">
+                                            <input type="number" value="0" max="100" min="0" class="form-control"
+                                            id="playerNumba">
+                                        </div>
+                                    </div>
+                                    <div class="col-md-2 text-center">
+                                        <div class="form-group">
+                                            <select class="form-control" id="posSelect"></select>
+                                        </div>
+                                    </div>
                                     <div class="col-md-2">
                                         <button disabled class="btn btn-success" id="addStartBtn"
                                         >Add</button>
@@ -257,8 +268,7 @@
                                     <div class="col">
                                         <div class="form-group">
                                             <select multiple class="form-control" id="startSelect"
-                                            form="#createGameForm">
-                                            </select>
+                                            form="#createGameForm"></select>
                                         </div>    
                                     </div>
                                 </div>
