create game successfully

--- a/views/createGame.ejs
+++ b/views/createGame.ejs
@@ -51,6 +51,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <button disabled class="btn btn-success" id="teamBtn"
+                                    class="nextBtns"
                                     >Next</button>
                                 </div>
                             </div>
@@ -85,6 +86,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <button disabled class="btn btn-success" id="oppoBtn"
+                                    class="nextBtns"
                                     >Next</button>
                                 </div>
                             </div>
@@ -119,6 +121,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <button disabled class="btn btn-success" id="compBtn"
+                                    class="nextBtns"
                                     >Next</button>
                                 </div>
                             </div>
@@ -154,6 +157,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <button disabled class="btn btn-success" id="seasonBtn"
+                                    class="nextBtns"
                                     >Next</button>
                                 </div>
                             </div>
@@ -185,6 +189,7 @@
                                 </div>
                                 <div class="col-md-2">
                                     <button disabled class="btn btn-success" id="scoreBtn"
+                                    class="nextBtns"
                                     >Next</button>
                                 </div>
                             </div>
@@ -198,8 +203,9 @@
                                         <h6 style="vertical-align: middle">Home</h6>
                                     </div>
                                     <div class="col-md-2">
-                                        <select class="custom-select mr-sm-2" id="homeInp">
-                                            <option selected value="true">True</option>
+                                        <select class="custom-select mr-sm-2" id="homeSelect">
+                                            <option value="**"></option>
+                                            <option value="true">True</option>
                                             <option value="false">False</option>
                                         </select>
                                     </div>
@@ -338,6 +344,12 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="row my-4">
+                    <div class="col text-center">
+                        <button class="btn btn-success btn-lg" id="createBtn"
+                        >CREATE</button>
                     </div>
                 </div>
             </div>
